# llm-pdf-qa-workshop

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
.devcontainer/: devcontainer.json  post_create_command.sh
.github/workflows/: ci.yaml
app/: app.py  prompts.py
