[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  tests/data
  | profiling
)/
'''
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true

[tool.isort]
profile = "black"
filter_files = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.poetry]
name = "llm-pdf-qa-sample-app"
version = "0.1.0"
description = ""
authors = ["Han Lee <lee.hanchung@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_pdf_qa_sample_app"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
langchain = "^0.0.285"
chainlit = "^0.6.402"
tiktoken = "^0.4.0"
pdfplumber = "^0.9.0"
chromadb = "^0.4.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
black = "^23.7.0"
isort = "^5.12.0"

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
]
ignore = [
    "E501",
    "E731",
    "E741",  # Ambiguous variable name: ...
    "E999",  # SyntaxError: invalid syntax. Got unexpected token Newline
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
ignore-init-module-imports = true
per-file-ignores = {}
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
